--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1 class="carousel-title">Cloud Computing, DevOps y DevOps Culture. </h1>
+                            <h1 class="carousel-title">Cloud Computing, DevOps y DevOps Culture......</h1>
                             <button class="btn btn-primary btn-rounded"><h1>Soluciones de almacenamiento en nube con Azure</h1></button>
                         </div>
                     </div>
